Move btree implementation to new development tree. Fix minor issues regarding headers.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(util util/datafile.c util/fileio.c util/hash.c util/set.c util/string.c)
+add_library(util util/btlib.c util/btree.c util/datafile.c util/fileio.c util/hash.c util/set.c util/string.c)
